--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "express-http-proxy": "^1.5.0",
+    "express-graphql": "^0.7.1",
     "gatsby": "^2.0.53",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-source-faker": "^2.0.3",
