--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-source-faker": "^2.0.3",
     "graphql-request": "^1.8.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2"
   },
   "devDependencies": {
     "prettier": "^1.15.2"
